--- a/src/components/proyectos/proyectos.component.html
+++ b/src/components/proyectos/proyectos.component.html
@@ -86,22 +86,22 @@
                 <div id="carouselProject3" class="carousel slide" data-bs-ride="carousel" style="max-width: 400px; margin: auto;">
                     <div class="carousel-inner rounded-3">
                         <div class="carousel-item active fixed-height">
-                            <img src="/images/Parseo_Casteo.png" alt="Parseo y Casteo" class="d-block w-100">
+                            <img src="images/Marvel-home.png" alt="Marvel Home" class="d-block w-100" style="object-fit: cover;object-position: 52%;">
                         </div>
                      
                         <div class="carousel-item fixed-height">
-                            <img src="/images/parse-Casteo-codigo.png" alt="Parseo y Casteo" class="d-block w-100">
+                            <img src="images/Timeline.png" alt="Timeline Codigo" class="d-block w-100" tyle="object-fit: cover; height: 70vh; object-position: 40%;">>
                         </div>
                         <div class="carousel-item fixed-height">
-                            <img src="/images/Parseo-Casteo-1.png" alt="Parseo y Casteo" class="d-block w-100">
+                            <img src="images/Quiz.png" alt="Quiz" class="d-block w-100" style="object-fit: cover; height: 70vh; object-position: 35%;">
                         </div>
                         <div class="carousel-item fixed-height">
-                            <img src="/images/casteo-parseo-4.png" alt="Parseo y Casteo" class="d-block w-100">
+                            <img src="images/Comics.png" alt="Comics" class="d-block w-100" style="object-fit: cover; height: 70vh; object-position: 58%;">
                         </div>
                         <div class="carousel-item fixed-height">
-                            <img src="/images/casteo-parseo-5.png" alt="Parseo y Casteo" class="d-block w-100">
+                            <img src="images/Wiky.png" alt="Wiky" class="d-block w-100" style="object-fit: cover;object-position: 10%;">
                         </div>
-                    </div>
+                    </div> 
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject3" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
@@ -113,13 +113,13 @@
                 </div>
             </div>
             <div class="col-md-5 d-flex flex-column justify-content-center contenido-descripcion"> <!-- Columna para la descripción -->
-                <h5 class="title">Parseo y Casteo</h5>
-                <p class="txt">Este proyecto se centra en la implementación de conceptos fundamentales de programación en Javascript, específicamente en el uso de parseo y casteo. La aplicación incluye herramientas prácticas como:  </p>
-                    <p class="txt">Calculadora de Préstamos: Esta herramienta permite a los usuarios calcular los pagos mensuales de un préstamo.
-                       <p class="txt"> Generador de Personas: Esta aplicación genera perfiles aleatorios de personas, incluyendo atributos como nombre, edad y ocupación.</p>
-                <div class="d-flex justify-content-center mt-3">
-                    <a href="https://parseo-casteo.netlify.app/" class="me-2 btn-proyecto">Ver Proyecto</a>
-                    <a href="https://github.com/Najwaelqortobi/parseo_casteo.git" class="btn-codigo">Ver Código</a>
+                <h5 class="title">Marvel Events Explorer</h5>
+                <p class="txt">Este proyecto es una página web interactiva sobre el universo Marvel que ofrece una experiencia dinámica y educativa. Presenta un listado de eventos destacados con un menú desplegable para seleccionar eventos específicos, mostrando cómics relacionados. </p>
+                    <p class="txt">Además, incluye acceso a la wiki de cada cómic para obtener información detallada y un quiz interactivo que evalúa el conocimiento de los usuarios sobre Marvel, proporcionando un puntaje final.
+                       <p class="txt"> El proyecto fue desarrollado utilizando tecnologías web modernas como HTML, CSS y JavaScript, implementadas con Vue CLI. </p>
+                       <div class="d-flex justify-content-center mt-3">
+                        <!-- <a href="https://parseo-casteo.netlify.app/" class="me-2 btn-proyecto" style="margin-top: -1rem;">Ver Proyecto</a> -->
+                        <a href="https://github.com/Najwaelqortobi/marvel-project.git" class="btn-codigo" style="margin-top: -1rem;">Ver Código</a>
                 </div>
             </div>
         </div>
